client/src/index.css
::selection{
  background-color: #43AA8B;
  color: white;

  
}

/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #888;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555;
}

body {
  margin: 0;
  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif; */
    font-family: 'Open Sans', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  /* background: url('./utils/dot-grid.png'); */
  /* background: url(https://live.staticflickr.com/4583/37647876375_41366fc17d_b.jpg); */
  /* //color: #424949; */
}
h1, h2, h3, h4, h5, h6{
  font-family: 'Balsamiq Sans', cursive;
}

h2 {
  background: linear-gradient( 50deg, 
  #F94144 13%, 
  #f3722c 13%, #f3722c 26%, 
  #F8961E 26%,  #F8961E 39%, 
  #F9C74F 39%, #F9C74F 52%, 
  #90BE6D 52%, #90BE6D 65%, 
  #43AA8B 65%, #43AA8B 78%,
  #577590 78%);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
/* test */

/* entire container, keeps perspective */
.flip-container {
	perspective: 1000px;
}
	/* flip the pane when hovered */
	.flip-container.flip .flipper{
		transform: rotateY(180deg);
	}

.flip-container, .front, .back {
	width: 300px;
	height: 500px;
}

/* flip speed goes here */
.flipper {
	transition: 0.6s;
	transform-style: preserve-3d;

	position: relative;
}

/* hide back of pane during swap */
.front, .back {
	backface-visibility: hidden;

	position: absolute;
	top: 0;
	left: 0;
}

/* front pane, placed above back */
.front {
	z-index: 2;
	/* for firefox 31 */
	transform: rotateY(0deg);
}

/* back, initially hidden pane */
.back {
	transform: rotateY(180deg);
}




.tvStatic:after {
  overflow: hidden;
  z-index: -100;
  animation: grain 8s steps(10) infinite;
  background-image: url(https://live.staticflickr.com/4583/37647876375_41366fc17d_b.jpg);
  background-clip: content-box;
  content: "";
  height: 300%;
  left: -50%;
  opacity: 0.1;
  position: fixed;
  top: -110%;
  width: 300%;
}

@keyframes grain {
  0%, 100% { transform:translate(0, 0) }
  10% { transform:translate(-5%, -10%) }
  20% { transform:translate(-15%, 5%) }
  30% { transform:translate(7%, -25%) }
  40% { transform:translate(-5%, 25%) }
  50% { transform:translate(-15%, 10%) }
  60% { transform:translate(15%, 0%) }
  70% { transform:translate(0%, 15%) }
  80% { transform:translate(3%, 35%) }
  90% { transform:translate(-10%, 10%) }
} 

